<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/feedback_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="14.0dip"
        android:paddingRight="14.0dip"
        android:paddingTop="14.0dip"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg"
            android:orientation="vertical"
            android:paddingLeft="20dip"
            android:paddingRight="20dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dip"
                android:text="@string/feedback_activity_fb"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/feedback_activity_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />

            <EditText
                android:id="@+id/feedback_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:autoLink="web|email"
                android:gravity="top"
                android:hint="@string/feedback_activity_hint"
                android:lines="4"
                android:textSize="@dimen/text_size_13" />

            <Button
                android:id="@+id/feedback_submit"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="30dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/login_btn_selector"
                android:text="@string/feedback_activity_btn_submit"
                android:textSize="@dimen/text_size_18" />
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/feedback_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/feedback_scrollview"
        android:layout_alignTop="@+id/feedback_scrollview"
        android:background="@drawable/login_close_button" />

</RelativeLayout>