<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/ipset_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="14.0dip"
        android:paddingRight="14.0dip"
        android:paddingTop="14.0dip"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg"
            android:orientation="vertical"
            android:paddingLeft="20dip"
            android:paddingRight="20dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dip"
                android:text="@string/ipset_activity_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/ipset_activity_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <EditText
                    android:id="@+id/local_gw_edit_1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="bottom"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/dot_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/local_gw_edit_1"
                    android:layout_marginTop="25dp"
                    android:layout_toRightOf="@id/local_gw_edit_1"
                    android:singleLine="true"
                    android:text="."
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/local_gw_edit_2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_toRightOf="@id/dot_1"
                    android:gravity="bottom"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/dot_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/local_gw_edit_1"
                    android:layout_marginTop="25dp"
                    android:layout_toRightOf="@id/local_gw_edit_2"
                    android:singleLine="true"
                    android:text="."
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/local_gw_edit_3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_toRightOf="@id/dot_2"
                    android:gravity="bottom"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/dot_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/local_gw_edit_1"
                    android:layout_marginTop="25dp"
                    android:layout_toRightOf="@id/local_gw_edit_3"
                    android:singleLine="true"
                    android:text="."
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/local_gw_edit_4"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_toRightOf="@id/dot_3"
                    android:gravity="bottom"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/ipset_submit"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="30dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/login_btn_selector"
                android:text="@string/ipset_activity_btn_submit"
                android:textSize="@dimen/text_size_18" />
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/ipset_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ipset_scrollview"
        android:layout_alignTop="@+id/ipset_scrollview"
        android:background="@drawable/login_close_button" />

</RelativeLayout>